--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^2.26.0",
     "firebase": "^9.5.0",
     "firebase-admin": "^10.0.0",
     "next": "^12.0.4",
     "nookies": "^2.5.2",
     "react": "^18.0.0-beta-149b420f6-20211119",
-    "react-dom": "^18.0.0-beta-149b420f6-20211119"
+    "react-dom": "^18.0.0-beta-149b420f6-20211119",
+    "react-fetch": "^0.0.9"
   },
   "devDependencies": {
     "eslint": "7",
