--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "date-fns": "^2.26.0",
     "firebase": "^9.5.0",
     "firebase-admin": "^10.0.0",
+    "framer": "^2.0.0-beta.13",
+    "framer-motion": "^5.3.3",
     "next": "^12.0.4",
     "nookies": "^2.5.2",
     "react": "^0.0.0-experimental-0cc724c77-20211125",
