--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nookies": "^2.5.2",
     "react": "^0.0.0-experimental-0cc724c77-20211125",
     "react-dom": "^0.0.0-experimental-0cc724c77-20211125",
-    "react-fetch": "^0.0.9"
+    "react-fetch": "^0.0.9",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
     "eslint": "7",
