--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12",
     "nookies": "^2.5.2",
     "react": "^0.0.0-experimental-0cc724c77-20211125",
-    "react-dom": "^0.0.0-experimental-0cc724c77-20211125"
+    "react-dom": "^0.0.0-experimental-0cc724c77-20211125",
+    "react-fetch": "^0.0.9"
   },
   "devDependencies": {
     "eslint": "7",
